[project]
name = "hierarchical-ai-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11.12"
dependencies = [
    "aiohappyeyeballs==2.6.1",
    "aiohttp==3.11.16",
    "aiosignal==1.3.2",
    "annotated-types==0.7.0",
    "anyio==4.9.0",
    "appnope==0.1.4 ; sys_platform == 'darwin'",
    "asttokens==3.0.0",
    "attrs==25.3.0",
    "audioop-lts==0.2.1 ; python_full_version >= '3.13'",
    "beautifulsoup4==4.13.3",
    "camelot-py>=1.0.0",
    "certifi==2025.1.31",
    "cffi==1.17.1",
    "charset-normalizer==3.4.1",
    "click==8.1.8",
    "cobble==0.1.4",
    "colorama==0.4.6",
    "comm==0.2.2",
    "cryptography==44.0.2",
    "dataclasses-json==0.6.7",
    "debugpy==1.8.11",
    "decorator==5.2.1",
    "defusedxml==0.7.1",
    "distro==1.9.0",
    "docx2txt==0.9",
    "duckduckgo-search==8.0.0",
    "exceptiongroup==1.2.2",
    "executing==2.1.0",
    "filelock==3.18.0",
    "frozenlist==1.5.0",
    "fsspec==2025.3.2",
    "google-search-results==2.4.2",
    "greenlet==3.1.1",
    "h11==0.14.0",
    "httpcore==1.0.7",
    "httpx==0.28.1",
    "httpx-sse==0.4.0",
    "huggingface-hub==0.30.2",
    "idna==3.10",
    "importlib-metadata==8.6.1",
    "ipykernel==6.29.5",
    "ipython==9.0.2",
    "ipython-pygments-lexers==1.1.1",
    "jedi==0.19.2",
    "jinja2==3.1.6",
    "jiter==0.9.0",
    "jsonpatch==1.33",
    "jsonpointer==3.0.0",
    "jupyter-client==8.6.3",
    "jupyter-core==5.7.2",
    "langchain==0.3.22",
    "langchain-community==0.3.20",
    "langchain-core==0.3.50",
    "langchain-experimental==0.3.4",
    "langchain-openai==0.3.12",
    "langchain-text-splitters==0.3.7",
    "langgraph==0.3.24",
    "langgraph-checkpoint==2.0.24",
    "langgraph-prebuilt==0.1.7",
    "langgraph-sdk==0.1.61",
    "langsmith==0.3.23",
    "lxml==5.3.1",
    "mammoth==1.9.0",
    "markdown-it-py==3.0.0",
    "markdownify==1.1.0",
    "markupsafe==3.0.2",
    "marshmallow==3.26.1",
    "matplotlib-inline==0.1.7",
    "mcp>=1.9.0",
    "mdurl==0.1.2",
    "multidict==6.2.0",
    "mypy-extensions==1.0.0",
    "nest-asyncio==1.6.0",
    "numpy==2.2.4",
    "olefile>=0.47",
    "openai==1.70.0",
    "opencv-python>=4.11.0.86",
    "orjson==3.10.16",
    "ormsgpack==1.9.1",
    "packaging==24.2",
    "pandas==2.2.3",
    "parso==0.8.4",
    "pathvalidate==3.2.3",
    "pdfminer==20191125",
    "pdfminer-six>=20240706",
    "pdfplumber==0.11.6",
    "pexpect==4.9.0 ; sys_platform != 'emscripten' and sys_platform != 'win32'",
    "pickleshare==0.7.5",
    "pillow==11.1.0",
    "pip==25.0",
    "platformdirs==4.3.7",
    "primp==0.14.0",
    "prompt-toolkit==3.0.50",
    "propcache==0.3.1",
    "psutil==5.9.0",
    "ptyprocess==0.7.0 ; sys_platform != 'emscripten' and sys_platform != 'win32'",
    "pure-eval==0.2.3",
    "puremagic==1.28",
    "py==1.11.0 ; implementation_name == 'pypy'",
    "pycparser==2.22",
    "pycryptodome==3.22.0",
    "pydantic==2.11.2",
    "pydantic-core==2.33.1",
    "pydantic-settings==2.8.1",
    "pydub==0.25.1",
    "pygments==2.19.1",
    "pymupdf>=1.26.0",
    "pypdf2>=3.0.1",
    "python-dateutil==2.9.0.post0",
    "python-docx==1.1.2",
    "python-dotenv==1.1.0",
    "python-pptx==1.0.2",
    "pytz==2025.2",
    "pywin32==310 ; platform_python_implementation != 'PyPy' and sys_platform == 'win32'",
    "pyyaml==6.0.2",
    "pyzmq==24.0.1",
    "regex==2024.11.6",
    "requests==2.32.3",
    "requests-toolbelt==1.0.0",
    "rich==14.0.0",
    "serpapi>=0.1.5",
    "setuptools==75.8.0",
    "six==1.17.0",
    "smolagents==1.13.0",
    "sniffio==1.3.1",
    "soupsieve==2.6",
    "speechrecognition==3.14.2",
    "sqlalchemy==2.0.40",
    "stack-data==0.6.3",
    "standard-aifc==3.13.0 ; python_full_version >= '3.13'",
    "standard-chunk==3.13.0 ; python_full_version >= '3.13'",
    "tabula>=1.0.5",
    "tenacity==9.1.2",
    "tiktoken==0.9.0",
    "tornado==6.2",
    "tqdm==4.67.1",
    "traitlets==5.14.3",
    "typing-extensions==4.13.0",
    "typing-inspect==0.9.0",
    "typing-inspection==0.4.0",
    "tzdata==2025.2",
    "urllib3==2.3.0",
    "wcwidth==0.2.13",
    "wheel==0.45.1",
    "xlsxwriter==3.2.2",
    "xxhash==3.5.0",
    "yarl==1.18.3",
    "youtube-transcript-api==1.0.3",
    "zipp==3.21.0",
    "zstandard==0.23.0",
]
